--- a/styles.css
+++ b/styles.css
@@ -109,4 +109,23 @@
     color:var(--primary-black);
   }
   
- 
+ /* hero section */
+.hero-section{
+    display: flex;
+    flex-direction: column;
+    gap:var(--spacing-semi-large);
+  
+  }
+  .hero-section-logo{
+    max-width: 60vw;
+    height: 100%;
+  }
+  .hero-section-logo img{
+    width: 100%;
+  }
+  .hero-section .hero-image{
+  width: 100%;
+  object-fit: cover;
+  height: 732px;
+  
+  }
