--- a/styles.css
+++ b/styles.css
@@ -453,6 +453,71 @@
   border-bottom: 1px solid #000000;
 }
 
+/* popup container */
+.popup-container{
+  position: fixed;
+    top: 30%;
+    left:30vw;
+    max-width: 441px;
+    background-color: var(--primary-grey);
+    opacity:0;
+    z-index:300;
+    border-radius: 6px;
+
+}
+.popup {
+  padding:32px;
+  border-radius:4px;
+  position: relative;
+   width: 100%;
+   height: 100%;
+  z-index:300;
+}
+
+.show{
+  opacity:1;
+}
+
+.popup #close {
+  position: absolute;
+  top: 5px;
+  right: 1.5rem;
+  background: transparent;
+  font-size: 1.75rem;
+  border:none;
+  opacity:0.5;
+}
+.popup img{
+  max-width:100%;
+  height:100%;
+}
+
+.btn-group button{
+  width:160px;
+  padding:10px;
+  border:none;
+  font-size:1rem;
+  color:#fff;
+  border-radius:3px;
+  margin:5px 3px;
+  text-transform: uppercase;
+}
+.btn-group .add{
+  background: #4caf50;
+
+}
+.btn-group .delete  {
+  background-color: red;
+}
+
+.popup #close:hover{
+  opacity: 1;
+  color:red;
+}
+.btn-group button:hover{
+  opacity: 0.9;
+}
+
 
 /* for small screens */
 
@@ -514,6 +579,14 @@
   }
   .lazy-loading{
     min-height: 380px;
+  }
+  .popup-container{
+    max-width:380px;
+      left:20%;
+
+  }
+  .popup{
+    padding:16px;
   }
 
 }
@@ -577,5 +650,13 @@
   .lazy-loading{
     min-height: 220px;
   }
+  .popup-container{
+    max-width:200px;
+       left:20vw;
+ 
+   }
+   .popup{
+     padding:8px;
+   }
  
 }
