--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@
     --font-size-bold:32px;
     --font-size-large:42px;
     --height-small:24px;
+    --height-medium:50px;
+    --height-large:72px;
     --font-medium:500;
     --font-semi-bold:600;
     --font-bold:700;
@@ -18,10 +20,12 @@
     --spacing-extra-small:4px;
     --spacing-triple-small:6px;
     --spacing-double-small:8px;
+    --spacing-semi-small:10px;
     --spacing-small:12px;
     --spacing-medium:16px;
     --spacing-semi-medium:24px;
     --spacing-large:32px;
+    --spacing-x-large:36px;
     --spacing-semi-large:42px;
     --spacing-extra-large:64px;
     --spacing-double-large:80px;
@@ -241,7 +245,7 @@
   font-weight: var(--font-bold);
   font-size: var(--font-size-large);
  margin:var( --spacing-zero);
- height: 50px;
+ height: var(--height-medium);
  margin-top:var( --spacing-extra-small);
 }
 
@@ -466,12 +470,12 @@
     background-color: var(--primary-grey);
     opacity:0;
     z-index:300;
-    border-radius: 6px;
+    border-radius: var(--spacing-triple-small);
 
 }
 .popup {
-  padding:32px;
-  border-radius:4px;
+  padding:var(--spacing-large);
+  border-radius:var(--spacing-extra-small);
   position: relative;
    width: 100%;
    height: 100%;
@@ -498,7 +502,7 @@
 
 .btn-group button{
   width:160px;
-  padding:10px;
+  padding:var(--spacing-semi-small);
   border:none;
   font-size:1rem;
   color:#fff;
@@ -561,7 +565,7 @@
   }
  
   .products-section .wrapper{
-    padding:36px var(--spacing-zero) var(--spacing-large) var(--spacing-zero);
+    padding:var(--spacing-x-large) var(--spacing-zero) var(--spacing-large) var(--spacing-zero);
   }
   .product-list-section .wrapper{
     padding:var(--spacing-semi-medium) var(--spacing-zero) var(--spacing-extra-large) var(--spacing-zero);
@@ -590,7 +594,7 @@
 
   }
   .popup{
-    padding:16px;
+    padding:var(--spacing-medium);
   }
 
 }
